# pretty_jinja

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  release.yml
dprint_plugin/: Cargo.toml
dprint_plugin/deployment/: schema.json
dprint_plugin/deployment/npm/: package.json
dprint_plugin/src/: config.rs  lib.rs
pretty_jinja/: Cargo.toml
pretty_jinja/examples/: debug_cst.rs  expr.rs  stmt.rs
pretty_jinja/src/: config.rs  lib.rs  parser.rs  printer.rs  syntax.rs
pretty_jinja/tests/: expr.rs  stmt.rs
