[package]
name = "dprint_plugin_jinja"
version = "0.1.0"
edition = "2024"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "pretty_jinja as dprint plugin."
repository = "https://github.com/g-plane/pretty_jinja"
license = "MIT"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0"
dprint-core = { version = "0.66", default-features = false, features = [
    "wasm",
] }
pretty_jinja = { path = "../pretty_jinja", features = ["config_serde"] }
serde_json = "1.0"
