[package]
name = "pretty_jinja"
version = "0.2.0"
edition = "2024"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Jinja expressions and statements formatter."
repository = "https://github.com/g-plane/pretty_jinja"
license = "MIT"
keywords = ["jinja", "formatter"]
exclude = ["/tests"]

[dependencies]
rowan = "0.16"
serde = { version = "1.0", features = ["derive"], optional = true }
tiny_pretty = "0.2"
winnow = "0.7"

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
similar-asserts = "1.7"

[features]
config_serde = ["serde"]
